# mcp-redmine-rd

./: .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  agents.md  pyproject.toml
.claude/skills/fix-bug/: SKILL.md
docs/: architecture.md  plan.md
skills/fix-bug/: SKILL.md
src/mcp_redmine_rd/: __init__.py  auth.py  client.py  images.py  prompts.py  resources.py  scopes.py  server.py  tools.py
tests/: conftest.py  test_auth.py  test_client.py  test_images.py  test_integration.py  test_prompts.py  test_resources.py  test_scopes.py  test_server_local.py  test_tools.py
