[project]
name = "mcp-redmine-rd"
version = "0.5.0"
description = "RapidData Redmine MCP server — bug-fixing tools with screenshots; single-user API-key auth"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RapidData" }]
keywords = ["mcp", "redmine", "claude", "bug-fixing", "mendix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/Jebershon/mcp-redmine-rd"
Repository = "https://github.com/Jebershon/mcp-redmine-rd"

[project.scripts]
mcp-redmine-rd = "mcp_redmine_rd.server:main"
mcp-redmine-rd-local = "mcp_redmine_rd.server:main_local_stdio"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
